--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
-    "react-navigation-stack": "^2.2.2"
+    "react-navigation-stack": "^2.2.2",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-axios-middleware": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
